crates/jsonschema-macros/tests/ui/invalid_content_media_type_type.rs
#[jsonschema::validator(
    schema = r#"{"contentMediaType":42}"#,
    draft = referencing::Draft::Draft7
)]
struct InvalidContentMediaTypeTypeValidator;

fn main() {}
